jeanKluster/templates/traefik/traefik-authentik-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  forwardAuth:
    address: http://authentik.dartus.fr/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
          - X-authentik-username
          - X-authentik-groups
          - X-authentik-entitlements
          - X-authentik-email
          - X-authentik-name
          - X-authentik-uid
          - X-authentik-jwt
          - X-authentik-meta-jwks
          - X-authentik-meta-outpost
          - X-authentik-meta-provider
          - X-authentik-meta-app
          - X-authentik-meta-version
