jeanKluster/templates/traefik/traefik-crowdsec-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bouncer
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  plugin:
    bouncer:
      enabled: true
      crowdsecMode: stream
      crowdsecLapiScheme: https
      crowdsecLapiHost: crowdsec-service.crowdsec:8080
      crowdsecLapiKey: mysecretkey12345
