jeanKluster/templates/traefik/traefik-externalservice.yml
apiVersion: v1
kind: Service
metadata:
  name: pi-external
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  type: ExternalName
  externalName: 192.168.1.16 # Le domaine ou IP du service externe
  ports:
  - port: 443
    targetPort: 443
