jeanKluster/templates/traefik/traefik-httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  hostnames:
    - traefik2.dartus.fr
  parentRefs:
    - # Group of the referent resource.
      group: gateway.networking.k8s.io
      # Kind of the referent resource.
      kind: Gateway
      # Name of the referent resource
      name: traefik-gateway
      # Namespace of the referent resource
      namespace: traefik
      # Name of the section within the target resource.
      # sectionName: websecure-traefik  
      sectionName: web  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api@internal
          kind: TraefikService
